# vmip-mise-poetry-plugin

./: .rtx.toml  Makefile  README.md  mise.plugin.toml  pyproject.toml  rtx.plugin.toml
.github/: CODEOWNERS
.github/workflows/: workflow.yml
test/: install.bats
